# PhysX4MC

./: .gitignore  README.md  build.gradle  gradle.properties
.github/workflows/: build.yml
docs/: block-collision.md  ccd.md  chunk-collision-pipeline.md  ci.md  debug-object-management.md  detached-block-prototype.md  diagnostics.md  dynamic-body-controls.md  entity-sync.md  gpu-dynamics.md  lifecycle.md  mechanics-api.md  milestone_1.md  milestones.md  milestones_2.md  native-packaging.md  partial-block-collision.md  player-bridge.md  player-physics.md  render-proxy.md  runtime-profiling.md  scene-layer.md  sublevel-client-presentation.md  sublevel-interaction-contract.md  sublevel-interactions.md  sublevel-query-bridge.md  sublevel.md  terrain-batching.md
src/main/cpp/physx4mc/: CMakeLists.txt
src/main/cpp/physx4mc/include/px4mc/: conversions.hpp  jni_bridge.hpp  physx_body.hpp  physx_context.hpp  physx_shape.hpp  physx_world.hpp
src/main/cpp/physx4mc/src/: conversions.cpp  jni_bridge.cpp  physx_body.cpp  physx_context.cpp  physx_shape.cpp  physx_world.cpp
src/main/java/com/firedoge/px4mc/: PhysX4mc.java  PhysX4mcClient.java
src/main/java/com/firedoge/px4mc/api/: PhysicsBackend.java  PhysicsBody.java  PhysicsBodyType.java  PhysicsBoxCollider.java  PhysicsEngine.java  PhysicsMaterial.java  PhysicsPose.java  PhysicsQuaternion.java  PhysicsShape.java  PhysicsVector.java  PhysicsWorld.java  PhysicsWorldConfig.java  RigidBodyDefinition.java
src/main/java/com/firedoge/px4mc/backend/: BackendRegistry.java
src/main/java/com/firedoge/px4mc/backend/physx/: PhysXBackend.java  PhysXBody.java  PhysXHandle.java  PhysXMaterial.java  PhysXNative.java  PhysXShape.java  PhysXWorld.java
src/main/java/com/firedoge/px4mc/command/: Px4mcClientCommands.java  Px4mcCommands.java  package-info.java
src/main/java/com/firedoge/px4mc/compat/: package-info.java
src/main/java/com/firedoge/px4mc/config/: PhysXConfig.java
src/main/java/com/firedoge/px4mc/debug/: PhysicsDebugFlags.java
src/main/java/com/firedoge/px4mc/mechanics/: MechanicsApi.java  MechanicsBodyId.java  MechanicsBodyRole.java  MechanicsBodySnapshot.java  MechanicsBodyType.java  MechanicsBoxDefinition.java  MechanicsCompoundBoxDefinition.java  MechanicsDebugProxies.java  MechanicsDebugProxy.java  MechanicsWorld.java  ServerMechanicsApi.java
src/main/java/com/firedoge/px4mc/minecraft/block/: package-info.java
src/main/java/com/firedoge/px4mc/minecraft/entity/: package-info.java
src/main/java/com/firedoge/px4mc/minecraft/level/: package-info.java
src/main/java/com/firedoge/px4mc/minecraft/player/: PlayerPhysicsManager.java  PlayerPhysicsSnapshot.java  PlayerProxyManager.java  PlayerProxySnapshot.java
src/main/java/com/firedoge/px4mc/minecraft/scene/: PhysicsObject.java  PhysicsObjectId.java  PhysicsObjectSnapshot.java  PhysicsObjectType.java  PhysicsSceneManager.java  RigidPhysicsObject.java  ServerPhysicsRuntime.java  ServerPhysicsScene.java
src/main/java/com/firedoge/px4mc/minecraft/sublevel/: ClientSubLevelContainer.java  ClientTrackedSubLevel.java  PhysicsSubLevel.java  PlotChunkHolder.java  ServerSubLevelContainer.java  SubLevelAssembler.java  SubLevelBlock.java  SubLevelBounds.java  SubLevelBreakResult.java  SubLevelChunkSender.java  SubLevelClientMetadata.java  SubLevelContainer.java  SubLevelContainerHolder.java  SubLevelContainers.java  SubLevelDebugVisuals.java  SubLevelEntityBridge.java  SubLevelId.java  SubLevelLifecycleState.java  SubLevelManager.java  SubLevelPersistence.java  SubLevelPickResult.java  SubLevelPlot.java  SubLevelPlotAllocator.java  SubLevelPlotId.java  SubLevelPlotTarget.java  SubLevelSectionStorage.java  SubLevelSnapshot.java  SubLevelTrackingSystem.java  SubLevelTransform.java
src/main/java/com/firedoge/px4mc/minecraft/sync/: package-info.java
src/main/java/com/firedoge/px4mc/mixin/: BlockMixin.java  ChunkMapMixin.java  ClientChunkCacheMixin.java  ClientCollisionGetterMixin.java  ClientLevelMixin.java  ClientPlayerMixin.java  CollisionGetterMixin.java  GameRendererMixin.java  HangingEntityMixin.java  ItemFrameMixin.java  LevelChunkMixin.java  LevelMixin.java  LevelRendererMixin.java  ParticleEngineMixin.java  PlayerMixin.java  ServerChunkCacheMixin.java  ServerLevelMixin.java  package-info.java
src/main/java/com/firedoge/px4mc/nativebridge/: NativeException.java  NativeLibraryLoader.java  NativePlatform.java
src/main/java/com/firedoge/px4mc/network/: ClientboundFinalizeSubLevelPayload.java  ClientboundStartTrackingSubLevelPayload.java  ClientboundStopTrackingSubLevelPayload.java  ClientboundSubLevelTransformPayload.java  PhysX4mcNetworking.java  SubLevelPayloadCodecs.java  package-info.java
src/main/java/com/firedoge/px4mc/physics/: PhysicsManager.java  PhysicsTicker.java
src/main/java/com/firedoge/px4mc/physics/body/: package-info.java
src/main/java/com/firedoge/px4mc/physics/collision/: package-info.java
src/main/java/com/firedoge/px4mc/physics/constraint/: package-info.java
src/main/java/com/firedoge/px4mc/physics/event/: package-info.java
src/main/java/com/firedoge/px4mc/physics/query/: package-info.java
src/main/java/com/firedoge/px4mc/physics/shape/: package-info.java
src/main/java/com/firedoge/px4mc/physics/world/: package-info.java
src/main/java/com/firedoge/px4mc/platform/neoforge/: NeoForgeClientEvents.java  NeoForgeEvents.java
src/main/java/com/firedoge/px4mc/render/: ClientSubLevelBlockView.java  ClientSubLevelBreakingProgress.java  ClientSubLevelCollision.java  ClientSubLevelEffectProjection.java  ClientSubLevelPickBridge.java  ClientSubLevelSelection.java  ProjectedTerrainParticle.java  SubLevelPlotRenderer.java  TransformingVertexConsumer.java  package-info.java
src/main/java/com/firedoge/px4mc/util/: MathConversions.java
src/main/resources/: physx4mc.mixins.json
src/main/resources/assets/physx4mc/lang/: en_us.json
src/test/java/com/firedoge/px4mc/debug/: NativePhysicsSmokeTest.java
tools/native/: build-linux.sh  build-macos.sh  build-windows.ps1
